# inferencing-2026

./: README.md
chapter1-streamlit/: Home.py  README.md  pyproject.toml  step1_hello.py  step2_widget.py  step3_layout.py
chapter2-ML/: car_data.csv  make_salary_model.py  predict_car.py  predict_salary.py  pyproject.toml  requirements.txt  salary_data.csv  salary_model.pkl
chapter2-ML/pages/: 1_Developer_Salary.py  2_Used_Car_Price.py
chapter3-DL/: pyproject.toml  requirements.txt  sentimental_sample.py  todayemotion_sample.py
chapter3-DL/.streamlit/: config.toml
chapter3-DL/pages/: 3_Sentimental_Analysis.py  4_Todays_Emotion.py
chapter4-LLM/: k_soul_sample.py  pyproject.toml  requirements.txt  title_sample.py
chapter4-LLM/pages/: 5_K_Soul_Reply_Generator.py  6_Title_Generator.py
